--- a/resources/assets/css/all.css
+++ b/resources/assets/css/all.css
@@ -604,6 +604,20 @@ label.file-label input[type="file"] {
     background-position: bottom;
 }
 
+.icon-new-service {
+    background:url('/images/new-service-icon.png');
+    width:60px;
+    height:60px;
+    background-position: top;
+    display:block;
+    margin-left: 15px;
+    margin-top: -3px;
+}
+
+.icon-new-service:hover {
+    background-position: bottom;
+}
+
 .file-label span .icon-upload {
     margin-top: -8px;
 }
@@ -612,10 +626,7 @@ label.file-label input[type="file"] {
     color:#cdcdcd;
 }
 
-
-
-
-/* Make clicks pass-through */
+/* NPROGRESS */
 #nprogress {
   pointer-events: none;
 }
@@ -720,10 +731,6 @@ body.loading, body.loading * {
 .client-chooser {
     color:#b2b2b2;
     font-size:18px;
-}
-
-.client-chooser label {
-
 }
 
 .client-chooser select {
