--- a/resources/assets/css/all.css
+++ b/resources/assets/css/all.css
@@ -618,6 +618,34 @@ label.file-label input[type="file"] {
     background-position: bottom;
 }
 
+.icon-new-seo {
+    background:url('/images/new-seo-icon.png');
+    width:60px;
+    height:60px;
+    background-position: top;
+    display:block;
+    margin-left: 15px;
+    margin-top: -3px;
+}
+
+.icon-new-seo:hover {
+    background-position: bottom;
+}
+
+.icon-new-info {
+    background:url('/images/new-info-icon.png');
+    width:60px;
+    height:60px;
+    background-position: top;
+    display:block;
+    margin-left: 15px;
+    margin-top: -3px;
+}
+
+.icon-new-info:hover {
+    background-position: bottom;
+}
+
 .file-label span .icon-upload {
     margin-top: -8px;
 }
@@ -739,6 +767,12 @@ body.loading, body.loading * {
     margin-left:15px;
 }
 
-.banners-container {
+.banners-container, .services-container {
     margin-bottom:15px;
+}
+
+@media (min-width: 768px) {
+    .form-horizontal .control-label {
+        padding-top: 13px !important;
+    }
 }
