--- a/resources/assets/css/all.css
+++ b/resources/assets/css/all.css
@@ -887,3 +887,9 @@ label.label-file.mouse-over {
 .attachment {
     margin-top:15px;
 }
+
+p.document {
+    display: inline-block;
+    position: relative;
+    top: -10px;
+}
