--- a/resources/assets/css/all.css
+++ b/resources/assets/css/all.css
@@ -85,8 +85,9 @@ body {
     background-position-y: bottom;
 }
 
-.btn-section-link:hover {
+.btn-section-link:hover, .btn-section-link:active, .btn-section-link:focus {
     text-decoration: none;
+    outline:none;
 }
 
 .btn-section-link:hover * {
