TIM-13 Giant login button like the rest of the site

--- a/resources/assets/css/all.css
+++ b/resources/assets/css/all.css
@@ -899,3 +899,10 @@ p.document {
     overflow: hidden;
     max-height: 57px;
 }
+
+.btn-login {
+    width: 200px;
+    height: 50px;
+    display: block;
+    margin-top: 15px;
+}
