TIM-12 Remove click state styles from top menu css

--- a/resources/assets/css/all.css
+++ b/resources/assets/css/all.css
@@ -32,6 +32,11 @@ body {
     box-shadow: none;
 }
 
+.main-nav .btn:active {
+    background: #ccc;
+    box-shadow: none;
+}
+
 .btn-logout {
     color: #000 !important;
 }
