--- a/resources/assets/css/all.css
+++ b/resources/assets/css/all.css
@@ -800,6 +800,15 @@ body.loading, body.loading * {
     .ticket-table tr td {
         padding:5px !important;
     }
+
+    .client-chooser {
+        font-size:14px;
+    }
+
+    .client-chooser select {
+        padding:5px 15% 5px 5px;
+        margin-left:10px;
+    }
 }
 
 @media (max-width: 450px) {
