--- a/resources/assets/css/all.css
+++ b/resources/assets/css/all.css
@@ -946,3 +946,8 @@ p.document {
 .clickable-row, .clientFormToggler {
     cursor:pointer;
 }
+
+.goto-column {
+    max-width:75px !important;
+    width:75px !important;
+}
