--- a/resources/assets/css/all.css
+++ b/resources/assets/css/all.css
@@ -816,7 +816,8 @@ body.loading, body.loading * {
     }
     
     .ticket-pad {
-        font-size: 11px;
+        font-size: 10px;
+        white-space: nowrap;
     }
 
     .page-heading h1 {
