TIM-29 all buttons to have a fade effect on rollover

--- a/resources/assets/css/all.css
+++ b/resources/assets/css/all.css
@@ -7,6 +7,10 @@ body {
     font-family: 'Open Sans', sans-serif;
 }
 
+div, .btn {
+    transition: all 0.3s ease;
+}
+
 .nav-container {
     border-bottom: #ccc 1px solid;
 }
