TIM-41 character max followed by ‘…’

--- a/resources/assets/css/all.css
+++ b/resources/assets/css/all.css
@@ -474,6 +474,7 @@ tr:hover .show-on-hover {
     overflow: hidden;
     max-width: 200px;
     vertical-align: middle !important;
+    text-overflow: ellipsis;
 }
 
 .ticket-table thead th {
