--- a/resources/assets/css/all.css
+++ b/resources/assets/css/all.css
@@ -607,10 +607,12 @@ label.file-label input[type="file"] {
 }
 
 .ticket-check label {
-    margin-left: 23px;
+    margin-left: 24px;
     position: relative;
     margin-top: -22px;
     color: #2ac7cc;
+    font-weight: normal;
+    font-size: 17px;
 }
 
 .page-content {
