TIM-71 Please make all user input text in form fields black

--- a/resources/assets/css/all.css
+++ b/resources/assets/css/all.css
@@ -215,7 +215,7 @@ div, .btn {
     border: #d9d9d9 1px solid;
     box-shadow: none;
     height: 53px;
-    color: #b2b2b2;
+    color: #000000;
 }
 
 /* Button Styles */
